--- a/CSS/style.css
+++ b/CSS/style.css
@@ -171,3 +171,13 @@ body{
         letter-spacing: 0.03em; 
         color: #FFFFFF;
 }
+
+.footer-logo-link {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    text-decoration: none;
+}
