--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,3 @@
-.visually-hidden {
-    position: absolute !important;
-    clip: rect(1px 1px 1px 1px);
-    clip: rect(1px, 1px, 1px, 1px);
-    padding: 0 !important;
-    border: 0 !important;
-    height: 1px !important;
-    width: 1px !important;
-    overflow: hidden;
-}
 
 h1,h2,h3,p{
     margin: 0;
@@ -29,6 +19,7 @@ body{
     width: 520px;
     justify-content: space-between;
     align-items: center;
+    padding: 24px 0px;
 }
 
 .nav-menu-right {
@@ -44,7 +35,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    outline: 1px solid red;
 }
 
 .logo-link{
@@ -56,7 +46,8 @@ body{
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #212121;
-    text-decoration: none; 
+    text-decoration: none;
+
 
 }
 
@@ -93,8 +84,10 @@ body{
     color: #2196F3;
 }
 
-.contact-list {
-    display: flex;
+
+.contact-link {
+    text-decoration: none;
+    color: #757575;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -102,18 +95,14 @@ body{
     list-style: none;
 }
 
-.contact-list a{
-    text-decoration: none;
-    color: #757575;
-}
-
-.contact-list a:hover {
+.contact-link:hover,.contact-link:focus {
     color: #2196F3;
 }
 
 .hero {
-    height: 600px;
-    background-color: #2F303A;;
+    background-color: #2F303A;
+    padding: 200px 0;
+
 }
 
 .hero-title {
@@ -124,6 +113,7 @@ body{
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
+    margin-bottom: 30px;
 }
 
 .hero-btn {
@@ -143,10 +133,16 @@ body{
     
 }
 
+.features{
+    width: 1200px;
+    margin: 0 auto;
+}
+
 .features-list {
     list-style: none;
     display: flex;
     justify-content: center;
+    margin: 94px 30px 0px 0px;
 }
 
 .features-subtitle {
@@ -155,7 +151,6 @@ body{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    margin: 94px 30px 10px 0px;
 }
 
 .features-paragraf {
@@ -168,9 +163,14 @@ body{
     margin: 0px 30px 0px 0px;
 }
 
+.electricity{
+    margin: 94px 0px;
+    height: 386px;
+}
+
 .electricity-parag{
     text-align: center;
-    margin: 118px 0px 50px;
+    margin: 0px 0px 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -203,7 +203,7 @@ body{
 }
 
 .people-cards{
-    margin: 0px 30px 94px 0px;
+    margin: 0px 30px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -247,8 +247,13 @@ body{
     height: 252px;
 }
 
+.footer-contact{
+    padding: 60px 0px 60px 215px;
+}
+
 .footer-contact-list{
     list-style: none;
+    padding: 0;
 }
 
 .footer-contact-list a{
@@ -262,10 +267,10 @@ body{
 
 .footer-parag{
     font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em; 
-        color: #FFFFFF;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em; 
+    color: #FFFFFF;
 }
 
 .footer-logo-link {
