--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,7 +102,10 @@ body{
 .hero {
     background-color: #2F303A;
     padding: 200px 0;
-
+    background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .hero-title {
