--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -22,7 +22,7 @@ body {
 }
 
 .nav-menu-right {
-    width: 307px;
+    width: 333px;
     display: flex;
     justify-content: space-between;
     padding: 0;
@@ -221,4 +221,13 @@ body {
     letter-spacing: 0.03em;
     color: #ffffff;
     text-decoration: none;
+}
+
+.icon-contact{
+    fill: #757575;
+    margin-right: 10px;
+}
+
+.contact-link:hover .icon-contact,.contact-link:focus .icon-contact{
+    fill:#2196F3;
 }
