--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -4,7 +4,8 @@ h2,p,ul{
 }
 
 ul{
-    list-style: none;
+    list-style-type: none;
+
 }
 
 body {
@@ -99,7 +100,6 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    list-style: none;
 }
 
 .contact-link:hover,
@@ -241,4 +241,8 @@ body {
     height: 120px;
     border-radius: 4px;
     background-color: #F5F4FA;
+}
+
+.icons-list{
+    display: flex;
 }
