--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -245,11 +245,18 @@ body {
     list-style-type: none;
 }
 
-.features-subtitle::before{
-    content: '';
-    width: 270px;
-    height: 120px;
-    border-radius: 4px;
-    background-color: #F5F4FA;
+.features-list-item:nth-child(-n+3) {
+    margin: 0 30px 0 0;
 }
 
+.features-cart {
+    width: 270px;
+    height: 120px;
+    background-color: #F5F4FA;
+    padding: 25px 0;
+}
+
+.features-cart-icon {
+    display: block;
+    margin: 0 auto;
+}
