--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,10 @@ h1,h2,h3,p,ul{
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 ul{
     list-style: none;
 }
@@ -79,6 +83,7 @@ body{
     font-size: 14px;
     line-height: 1,14;
     letter-spacing: 0.02em;
+    position: relative;
 }
 
 .nav-list{
@@ -93,15 +98,26 @@ body{
     width: 281px;
 }
 
-
-.nav-list a {
-    text-decoration: none;
+.nav-list-link{
+    position: relative;
     color: #212121;
 }
 
-.nav-list a:hover {
+.nav-list-link:hover::after{
+    content: "";
+    display: block;
+    background-color: #2196F3;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    top: 45px;
+}
+
+.nav-list-link:hover{
     color: #2196F3;
 }
+
 
 
 .contact-link {
@@ -203,13 +219,34 @@ body{
     margin: 0 auto;
 }
 
-.electricity-img {
+.thumb {
     width: 370px;
     height: 294px;
+    position: relative;
+}
+
+.electricity-img{
+    object-position: 100%;
 }
 
 .electricity-list-item:nth-child(-n+2){
     margin-right: 30px;
+}
+
+.label {
+    position: absolute;
+    width: 370px;
+    height: 70px;
+    bottom: 0;
+    text-align: center;
+    padding-top: 27px;
+    background: rgba(47, 48, 58, 0.80);
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
 }
 
 .people{
