--- a/CSS/style.css
+++ b/CSS/style.css
@@ -531,6 +531,12 @@ body{
     visibility: hidden;
 }
 
+.modal-list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .modal-label {
     display: flex;
     flex-direction: column;
@@ -538,6 +544,7 @@ body{
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 0.12px;
+    position: relative;
 }
 
 .modal-input {
@@ -547,10 +554,21 @@ body{
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.20);
     margin-top: 4px;
+    outline: none;
+    padding: 11px 0 11px 42px;
+    cursor: pointer;
 }
 
-.modal-input:hover, .modal-input:focus{
-    border: 2px solid #2196F3;
+.modal-input:focus + .modal-svg{
+    fill: #2196F3;
+}
+
+.modal-input:hover+.modal-svg {
+    fill: #2196F3;
+}
+
+.modal-input:focus, .modal-input:hover {
+    border-color: #2196F3;
 }
 
 .modal-bth-close {
@@ -633,12 +651,15 @@ body{
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.96px;
-    margin: 0 120px 40px;
+    margin: 0 120px 0;
 }
 
 .modal-svg{
     width: 18px;
     height: 18px;
+    position: absolute;
+    top: 28px;
+    left: 12px;
 }
 
 .modal-link{
@@ -651,16 +672,15 @@ body{
     text-decoration-line: underline;
 }
 
-.subscribe-title{
+.footer-label{
     color: #FFF;
     font-size: 14px;
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
-    padding: 12px 0 20px;
 }
 
-.subscribe-input{
+.footer-email{
     width: 358px;
     height: 50px;
     border-radius: 4px;
@@ -669,6 +689,8 @@ body{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #fff;
     padding: 15px 0 15px 16px;
+    margin-top: 20px;
+
 }
 
 .subscribe-bth{
@@ -685,17 +707,27 @@ body{
     letter-spacing: 0.96px;
     display: flex;
     align-items: center;
+    margin-left: 12px;
+    padding: 0 28px 0 28px;
+}
+
+.footer-form{
+    display: flex;
+    align-items: flex-end;
 }
 
 .subscribe-svg{
+    margin-left: 10px;
     width: 24px;
     height: 24px;
 }
 
-.subscribe-parag{
-    padding: 0 10px 0 28px;
-}
-
 .subscribe-list{
     display: flex; 
+}
+
+.subscribe{
+    padding-top: 12px;
+    width: 570px;
+    margin-left: 93px;
 }
