--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -200,6 +200,8 @@ body {
 
 .main-list-item{
     border: 1px solid #EEEEEE;
+    position: relative;
+    overflow: hidden;
 }
 
 .main-list-item:nth-child(-n+6){
@@ -357,4 +359,30 @@ body {
     width: 20px;
     height: 20px;
     fill: #FFFFFF;
+}
+
+.box-text{
+    color: #FFF;
+        font-family: 'Roboto';
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0.54px;
+        margin: 0;
+}
+
+.overlay{
+    padding: 63px 24px;
+    background: rgba(33, 150, 243, 0.90);
+    transform: translatey(-101%);
+    position: absolute;
+    top: 0;
+    transition: transform 1s ease;
+    width: 322px;
+
+}
+
+.main-list-item:hover .overlay{
+    transform: translatey(0);
 }
