--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,6 +116,7 @@ body{
 
 .nav-list-link:hover{
     color: #2196F3;
+    transition: 0.2s ease;
 }
 
 
@@ -168,6 +169,7 @@ body{
     text-align: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
+    cursor: pointer;
     
 }
 
@@ -247,6 +249,12 @@ body{
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
+}
+
+.label:hover{
+    box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
+        -webkit-box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
+        -moz-box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
 }
 
 .people{
@@ -339,6 +347,12 @@ body{
 .icon-list-item:hover, .icon-list-item:focus{
     border-radius: 50%;
     background-color: #2196F3;
+    transition: background-color 0.2s ease-in;
+    box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+        -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+        -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+    transition: box-shadow 0.2s ease-in;
+    
 }
 
 .people-work {
@@ -448,10 +462,15 @@ body{
 
 .clients-list-item:hover .clients-icon{
     fill: #2196F3;
+    transition: fill 0.3s ease-in;
 }
 
 .clients-list-item:hover{
     border-color: #2196F3;
+    transition: border-color 0.3s ease-in;
+    box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+        -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+        -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
 }
 
 .footer-links{
@@ -494,6 +513,7 @@ body{
 
 .footer-list-item:hover, .footer-list-item:focus{
     background-color: #2196F3;
+    transition: 0.3s ease-in;
 }
 
 .footer-svg{
@@ -652,6 +672,7 @@ body{
     line-height: 30px;
     letter-spacing: 0.96px;
     margin: 0 120px 0;
+    cursor: pointer;
 }
 
 .modal-svg{
