--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -156,6 +156,7 @@ body {
     background-color: #2196F3;
     color: #FFFFFF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: background-color 0.2s ease-in;
 }
 
 .thumb{
@@ -211,7 +212,6 @@ body {
 .footer {
     padding: 60px 0 0;
     background-color: #2F303A;
-    width: 1600px;
     height: 252px;
     margin-top: 94px;
 }
@@ -221,6 +221,7 @@ body {
 }
 
 .footer-contact {
+    padding-bottom: 60px;
     margin-right: 70px;
 }
 
@@ -268,56 +269,12 @@ body {
     text-decoration: none;
 }
 
-
-.clients {
-    padding: 94px 0;
-}
-
-.clients-title {
-    color: #212121;
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    letter-spacing: 1.08px;
-    margin-bottom: 50px;
-}
-
-.clients-list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.clients-list-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 92px;
-    border-radius: 4px;
-    border: 1px solid #AFB1B8;
-}
-
-.clients-icon {
-    fill: #AFB1B8;
-    width: 106px;
-    height: 60px;
-}
-
-.clients-list-item:hover .clients-icon {
-    fill: #2196F3;
-}
-
-.clients-list-item:hover {
-    border-color: #2196F3;
-}
-
 .footer-links {
     padding: 12px 0 0;
 }
 
 .footer-title {
-    margin-bottom: 20px;
+    margin: 0 0 20px;
     color: #FFF;
     font-size: 14px;
     font-style: normal;
@@ -353,12 +310,72 @@ body {
 .footer-list-item:hover,
 .footer-list-item:focus {
     background-color: #2196F3;
+    transition: 0.3s ease-in;
 }
 
 .footer-svg {
     width: 20px;
     height: 20px;
     fill: #FFFFFF;
+}
+
+.footer-label {
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+}
+
+.footer-email {
+    width: 358px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background: rgba(33, 150, 243, 0.00);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #fff;
+    padding: 15px 0 15px 16px;
+    margin-top: 20px;
+
+}
+
+.subscribe-bth {
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 0.96px;
+    display: flex;
+    align-items: center;
+    margin-left: 12px;
+    padding: 0 28px 0 28px;
+}
+
+.footer-form {
+    display: flex;
+    align-items: flex-end;
+}
+
+.subscribe-svg {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+}
+
+.subscribe-list {
+    display: flex;
+}
+
+.subscribe {
+    padding-top: 12px;
+    width: 570px;
+    margin-left: 93px;
 }
 
 .box-text{
