--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,10 +104,15 @@ body{
 }
 
 .nav-list-link:hover::after{
+    width: 100%;
+    transition: 0.2s ease;
+}
+
+.nav-list-link:after{
     content: "";
     display: block;
     background-color: #2196F3;
-    width: 100%;
+    width: 0;
     height: 4px;
     border-radius: 2px;
     position: absolute;
