--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -95,10 +95,15 @@ body {
 }
 
 .nav-list-link:hover::after {
+    width: 100%;
+    transition: 0.2s ease;
+}
+
+.nav-list-link:after {
     content: "";
     display: block;
     background-color: #2196F3;
-    width: 100%;
+    width: 0;
     height: 4px;
     border-radius: 2px;
     position: absolute;
@@ -107,6 +112,7 @@ body {
 
 .nav-list-link:hover {
     color: #2196F3;
+    transition: 0.2s ease;
 }
 
 .contact-link {
