--- a/CSS/style.css
+++ b/CSS/style.css
@@ -255,12 +255,26 @@ body{
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
+    animation: labelshadow 1s ease-in 500ms infinite alternate;
 }
 
-.label:hover{
-    box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
-        -webkit-box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
-        -moz-box-shadow: 0px 0px 22px 10px rgba(0, 0, 0, 0.56);
+/* .label:hover{
+    
+} */
+
+@keyframes labelshadow{
+    0%{
+        box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+
+    }
+
+    100%{
+        box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
+    }
 }
 
 .people{
