--- a/CSS/style.css
+++ b/CSS/style.css
@@ -176,7 +176,23 @@ body{
     letter-spacing: 0.06em;
     color: #FFFFFF;
     cursor: pointer;
+    animation: herobth 1s ease-in 500ms infinite alternate;
     
+}
+
+@keyframes herobth {
+    0% {
+        box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+
+    }
+
+    100% {
+    box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+    }
 }
 
 .features{
