--- a/CSS/style.css
+++ b/CSS/style.css
@@ -766,6 +766,22 @@ body{
     align-items: center;
     margin-left: 12px;
     padding: 0 28px 0 28px;
+    animation: subscribebth 1s ease-in 500ms infinite alternate;
+}
+
+@keyframes subscribebth {
+    0% {
+        box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+
+    }
+
+    100% {
+        box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+    }
 }
 
 .footer-form{
